@@ -1,3 +1,8 @@
+2010-03-16  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el: Use drag-stuff instead of move-line-up and
+	move-line-down.
+
 2010-03-04  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Disable size-indication-mode.
